adapted plugin template to my use. test case runs and properly displays config options

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=EventsAPI
+author=Morgan Van V.
+support=please
+description=A plugin that POSTs updates to a custom API endpoint
+tags=API
+plugins=com.EventsAPIPlugin
