updated plugin properties to include a support link and proper tags

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=EventsAPI
 author=Morgan Van V.
-support=please
-description=A plugin that POSTs updates to a custom API endpoint
-tags=API
+support=https://discord.gg/wxeGPVn7bs
+description=POSTs customizable data updates to a user defined API endpoint
+tags=api, export, data, events
 plugins=com.EventsAPIPlugin
