--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=Morgan Van V.
 support=https://discord.gg/wxeGPVn7bs
 description=POSTs customizable data updates to a user defined API endpoint
 tags=api, export, data, events
-plugins=com.EventsAPIPlugin
+plugins=com.eventsapi.EventsAPIPlugin
